<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/tool"
            layout="@layout/toolbar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:background="@drawable/bg_result_measurement"
            android:gravity="center_horizontal"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tool">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/tv_img_light"
                    android:layout_width="@dimen/sp_36"
                    android:layout_height="@dimen/sp_36"
                    android:src="@drawable/ic_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/TextViewStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_6"
                    android:text="Best Practice"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintBottom_toBottomOf="@id/tv_img_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_img_light"
                    app:layout_constraintTop_toTopOf="@id/tv_img_light" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/tv_info_msg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/dp_12"
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:text="Important checks to be consider before scan"
                        android:textColor="@color/secondary_theme_text_color"
                        android:textSize="@dimen/sp_14"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/header" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8"
                        android:paddingHorizontal="@dimen/dp_12"
                        android:paddingVertical="@dimen/dp_8">

                        <ImageView
                            android:id="@+id/point_one"
                            android:layout_width="@dimen/dp_6"
                            android:layout_height="@dimen/dp_6"
                            android:layout_marginTop="@dimen/dp_6"
                            android:src="@drawable/ic_orange_dot"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/txt_one" />

                        <TextView
                            android:id="@+id/txt_one"
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_8"
                            android:fontFamily="@font/inter_medium"
                            android:text="@string/point_one"
                            android:textColor="@color/secondary_theme_text_color"
                            android:textSize="@dimen/sp_13"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@id/point_one"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/dp_12"
                        android:paddingVertical="@dimen/dp_8">

                        <ImageView
                            android:id="@+id/point_two"
                            android:layout_width="@dimen/dp_6"
                            android:layout_height="@dimen/dp_6"
                            android:layout_marginTop="@dimen/dp_6"
                            android:src="@drawable/ic_orange_dot"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/txt_two" />

                        <TextView
                            android:id="@+id/txt_two"
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_8"
                            android:fontFamily="@font/inter_medium"
                            android:text="@string/point_two"
                            android:textColor="@color/secondary_theme_text_color"
                            android:textSize="@dimen/sp_13"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@id/point_two"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/dp_12"
                        android:paddingVertical="@dimen/dp_8">

                        <ImageView
                            android:id="@+id/point_three"
                            android:layout_width="@dimen/dp_6"
                            android:layout_height="@dimen/dp_6"
                            android:layout_marginTop="@dimen/dp_6"
                            android:src="@drawable/ic_orange_dot"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/txt_three" />

                        <TextView
                            android:id="@+id/txt_three"
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_8"
                            android:fontFamily="@font/inter_medium"
                            android:text="@string/point_three"
                            android:textColor="@color/secondary_theme_text_color"
                            android:textSize="@dimen/sp_13"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/point_three"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/dp_12"
                        android:paddingVertical="@dimen/dp_8">

                        <ImageView
                            android:id="@+id/point_four"
                            android:layout_width="@dimen/dp_6"
                            android:layout_height="@dimen/dp_6"
                            android:layout_marginTop="@dimen/dp_6"
                            android:src="@drawable/ic_orange_dot"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/txt_four" />

                        <TextView
                            android:id="@+id/txt_four"
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_8"
                            android:fontFamily="@font/inter_medium"
                            android:text="@string/point_four"
                            android:textColor="@color/secondary_theme_text_color"
                            android:textSize="@dimen/sp_13"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/point_four"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/dp_12"
                        android:paddingVertical="@dimen/dp_8">

                        <ImageView
                            android:id="@+id/point_five"
                            android:layout_width="@dimen/dp_6"
                            android:layout_height="@dimen/dp_6"
                            android:layout_marginTop="@dimen/dp_6"
                            android:src="@drawable/ic_orange_dot"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/txt_five" />

                        <TextView
                            android:id="@+id/txt_five"
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_8"
                            android:fontFamily="@font/inter_medium"
                            android:text="@string/point_five"
                            android:textColor="@color/secondary_theme_text_color"
                            android:textSize="@dimen/sp_13"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/point_five"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
